# crosscompute-views-design

./: README.md  setup.cfg
crosscompute_views_misc/: constants.py
crosscompute_views_misc/assets/: color-output-header.js  color-output.js  color.html  qr-input-header.js  qr-input.js  qr.html
crosscompute_views_misc/routines/: assets.py  variable.py
