[metadata]
name = crosscompute-views-misc
version = 0.1.0
description = Add suport for not so common fields
long_description = file: README.md
long_description_content_type = text/markdown
url = https://crosscompute.com
author = CrossCompute Inc.
author_email = support@crosscompute.com
license = MIT
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3
project_urls =
    Bug Tracker = https://github.com/crosscompute/crosscompute-views-misc/issues
    Documentation = https://github.com/crosscompute/crosscompute-views-misc
    Source Code = https://github.com/crosscompute/crosscompute-views-misc
[options]
packages = find:
python_requires = >=3.10
install_requires =
    crosscompute>=0.9.4.6
    jinja2
zip_safe = True
[options.package_data]
crosscompute_views_map =
    assets/*.css
    assets/*.html
    assets/*.js
[options.entry_points]
crosscompute.views =
    color-picker = crosscompute_views_misc.routines.variable.ColorPickerView

[flake8]
max-line-length = 79
select = B,C,E,F,W
ignore = W503
